--- a/stories/transfer_matrices/part1.html
+++ b/stories/transfer_matrices/part1.html
@@ -12,13 +12,13 @@
 
 <body>
   <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/index.html">Home</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
+    <a href="/landing_page.html">Home</a>
     <a href="#">About</a>
   </div>
 
   <div id="main">
-    <button class="openbtn" onclick="openNav()">&#9776; </button>
+    <button class="openbtn" onclick="toggleNav()">&#9776; </button>
     <span class="title">Transfer Matrices</span>
   </div>
 </body>
