--- a/landing_page.html
+++ b/landing_page.html
@@ -13,7 +13,7 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-    <a href="/index.html">Home</a>
+    <a href="/landing_page.html">Home</a>
     <a href="#">About</a>
   </div>
 
