typos and color change

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-    <a href="/landing_page.html">Home</a>
+    <a href="/index.html">Home</a>
     <a href="#">About</a>
   </div>
 
   <div id="main">
     <button class="openbtn" onclick="toggleNav()">&#9776; </button>
     <span class="title">What I Do I Understand</span>
-    <p>Hi, my name is Gil and I like to learn things. Among all the things iv'e learned, Iv'e discovered that those
+    <p>Hi, my name is Gil and I like to learn things. Among all the things i've learned, I've discovered that those
       which stuck the best were those that involved <b>doing</b>, rather then <b>reading</b> or <b>hearing</b> </p>
     <p>
       This website/blog/whatever is dedicated to sharing interesting learning experiences me (or my friends) had. The
