--- a/stories/transfer_matrices/part1.html
+++ b/stories/transfer_matrices/part1.html
@@ -13,13 +13,16 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-    <a href="/landing_page.html">Home</a>
+    <a href="/index.html">Home</a>
     <a href="#">About</a>
   </div>
 
   <div id="main">
     <button class="openbtn" onclick="toggleNav()">&#9776; </button>
     <span class="title">Transfer Matrices</span>
+    <h1>
+      Section under construction...
+    </h1>
   </div>
 </body>
 
